--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,28 +1,8 @@
-<!-- <h2>Get Started</h2>
-
-<%= link_to "Get Started", step1_wizard_path, class: 'btn btn-success' %>
- -->
-
-
-
  <div class="container pt-5">
   <div class="row">
     <div class="col-md-6">
       <h1>The easy way to compare and buy life insurance</h1>
-  <form class="zip_form">
-  <div class="form-group row">
-    <label for="zipcode" class="col-sm-2 col-form-label">Enter Zipcode</label>
-    <div class="col-sm-10">
-      <input type="zipcode" class="form-control" id="inputZipcode" placeholder="Enter Zipcode">
-    </div>
-  </div>
-    <div class="form-group row">
-    <label for="" class="col-sm-2 col-form-label"></label>
-    <div class="col-sm-10">
-      <%= link_to "Get Started", step1_wizard_path, class: 'btn btn-success' %>
-    </div>
-  </div>
-</form>
+  <%= link_to "Get Started", step1_wizard_path, class: 'btn btn-primary' %>
 </div> 
     <div class="col-md-6">
       <img class="img-fluid" src="https://policygenius-images.imgix.net/photos/home/mother-holding-yawning-baby.jpg?fit=max&auto=format&ch=Width,DPR&w=720">
