--- a/app/views/wizards/step2.html.erb
+++ b/app/views/wizards/step2.html.erb
@@ -1,14 +1,15 @@
-<div class="d-flex justify-content-between">
-	<h4>Basic</h4>
-	<h4>Health</h4>
-	<h4>Coverage</h4>
-	<h4>Quotes</h4>
-</div>
-
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-
+<div class="container">
+  <div class="d-flex justify-content-between">
+    <h4>Location</h4>
+    <h4>Basic</h4>
+    <h4>Health</h4>
+    <h4>Coverage</h4>
+    <h4>Quotes</h4>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+  <!-- end progress -->
 <div id="zipcode" class="invisible"><%= @user_wizard.zip_code %></div>
 <div style="font-size:3em; width: 60%;" id="empty_zip" class="text-center m-auto"></div>
 
@@ -20,6 +21,7 @@
   <%= f.input :last_name %>
   <%= f.submit 'Continue', class: "btn btn-primary" %>
 <% end %>
+</div>
 
 <script type="text/javascript">
 $(document).ready(function() {
