--- a/app/views/wizards/step4.html.erb
+++ b/app/views/wizards/step4.html.erb
@@ -1,15 +1,54 @@
-<ol class="breadcrumb">
-  <li><%= link_to "Step 1", step1_wizard_path %></li>
-  <li><%= link_to "Step 2", step2_wizard_path %></li>
-  <li><%= link_to "Step 3", step3_wizard_path %></li>
-  <li class="active">Step 4</li>
-</ol>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/bootstrap-slider.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/css/bootstrap-slider.css">
+<!-- end sliderstyles -->
 
-<%= simple_form_for @user_wizard, as: :user_wizard, url: validate_step_wizard_path do |f| %>
-  <%= f.error_notification %>
+<div class="container">
+	<div class="d-flex justify-content-between">
+		<h4>Location</h4>
+		<h4>Basic</h4>
+		<h4>Health</h4>
+		<h4>Coverage</h4>
+		<h4>Quotes</h4>
+	</div>
+	<div class="progress">
+		<div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+	</div>
+	<!-- end progress -->
+	<div class="row pt-5">
+		<div class="col-md-6 pb-3">
+			<h3>Coverage Amounts</h3>
+		<!-- <form>
+			<input id="ex19" type="text"
+			data-provide="slider"
+			data-slider-ticks="[1, 2, 3, 4]"
+			data-slider-ticks-labels='["$250K", "$500K", "$750K", "$1MM"]'
+			data-slider-min="1"
+			data-slider-max="4"
+			data-slider-step="1"
+			data-slider-value="4"
+			data-slider-tooltip="hide" />
+		</form> -->
 
-  <%= hidden_field_tag :current_step, 'step4' %>
-  <%= f.input :phone_number %>
+		
+<div class="d-flex flex-row">
+<div><h1 id="ex6CurrentSliderValLabel">$</h1></div>
+<div><h1 id="ex6SliderVal">3</h1></div>
+</div>
+<input id="ex6" type="text" data-slider-min="0" data-slider-max="10000" data-slider-step="1000" data-slider-value="3"/>
 
-  <%= f.submit 'Finish' %>
-<% end %>
+
+	</div>
+	<div class="col-md-6 pb-3">
+		<h3>Policy Length</h3>
+	</div>
+</div>
+</div>
+
+<script type="text/javascript">
+	// With JQuery
+$("#ex6").slider();
+$("#ex6").on("slide", function(slideEvt) {
+	$("#ex6SliderVal").text(slideEvt.value);
+});
+</script>
+
