--- a/app/views/wizards/step3.html.erb
+++ b/app/views/wizards/step3.html.erb
@@ -1,16 +1,34 @@
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
-</div>
+<div class="container">
+  <div class="d-flex justify-content-between">
+    <h4>Location</h4>
+    <h4>Basic</h4>
+    <h4>Health</h4>
+    <h4>Coverage</h4>
+    <h4>Quotes</h4>
+  </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+  <!-- end progress -->
+<div id="zipcode" class="invisible"><%= @user_wizard.zip_code %></div>
+<div style="font-size:3em; width: 60%;" id="empty_zip" class="text-center m-auto"></div>
 
+<div stlye="width: 60%" class="m-auto">
 <%= simple_form_for @user_wizard, as: :user_wizard, url: validate_step_wizard_path do |f| %>
   <%= f.error_notification %>
 
   <%= hidden_field_tag :current_step, 'step3' %>
-  <%= f.input :address_1 %>
-  <%= f.input :address_2 %>
-  <%= f.input :zip_code %>
-  <%= f.input :city %>
-  <%= f.input :country %>
-
-  <%= f.submit 'Continue' %>
+  <%= f.input :height %>
+  <%= f.input :weight %>
+  <%= f.input :tobacco %>
+  <%= f.input :medical %>
+  <%= f.input :family_illness %>
+  <%= f.input :license %>
+  <%= f.submit 'Get My Free Quotes', class: "btn btn-primary" %>
 <% end %>
+</div>
+
+
+
+
+
